--- a/XFELIBFB/ibfbctrl_plane.template
+++ b/XFELIBFB/ibfbctrl_plane.template
@@ -1308,7 +1308,7 @@ record(longin, "$(DEV):$(PLANE)-FF-SCAN-STATUS") {
 record(longin, "$(DEV):$(PLANE)-FF-SCAN-KICKER") {
   field(SCAN, "I/O Intr")
   field(DTYP, "S7gpac")
-  field(INP,  "@$(SRV)/$(READ_OFFSET)+0x01D9 T=UINT8")
+  field(INP,  "@$(SRV)/$(READ_OFFSET)+0x01A9 T=UINT8")
 }
 
 record(longin, "$(DEV):$(PLANE)-FF-SCAN-ITERATION") {
@@ -1320,7 +1320,7 @@ record(longin, "$(DEV):$(PLANE)-FF-SCAN-ITERATION") {
 record(longin, "$(DEV):$(PLANE)-FF-SCAN-POINT") {
   field(SCAN, "I/O Intr")
   field(DTYP, "S7gpac")
-  field(INP,  "@$(SRV)/$(READ_OFFSET)+0x01DB T=UINT8")
+  field(INP,  "@$(SRV)/$(READ_OFFSET)+0x01AB T=UINT8")
 }
 
 record(acalcout, "$(DEV):$(PLANE)-BPM1-SP-WAV") {
