--- a/XFELIBFB/ibfbctrl_plane.template
+++ b/XFELIBFB/ibfbctrl_plane.template
@@ -102,11 +102,11 @@ record(mbbo, "$(DEV):$(PLANE)-DAQ-MUX0") {
   field(ZRVL, "0" )
   field(ONVL, "1" )
   field(TWVL, "2" )
-#  field(THVL, "3" )
+  field(THVL, "3" )
   field(ZRST, "00: BPM Pos" )  
   field(ONST, "01: FB I" )
-  field(TWST, "02: FB out int" )
-#  field(THST, "03: SP Table" )
+  field(TWST, "02: FB kick int" )
+  field(THST, "03: FB D" )
 }
 
 record(mbbo, "$(DEV):$(PLANE)-DAQ-MUX1") {
@@ -120,7 +120,7 @@ record(mbbo, "$(DEV):$(PLANE)-DAQ-MUX1") {
   field(TWVL, "2" )
   field(THVL, "3" )
   field(ZRST, "10: Pos error" )
-  field(ONST, "11: FB kick" )
+  field(ONST, "11: FB kick sin" )
   field(TWST, "12: FF tab int" )
   field(THST, "13: SP tab" )
 }
@@ -137,7 +137,7 @@ record(mbbo, "$(DEV):$(PLANE)-DAQ-MUX2") {
   field(THVL, "3" )
   field(ZRST, "20: I acc" )
   field(ONST, "21: PID sum" )
-  field(TWST, "22: FB D" )
+  field(TWST, "22: empty" )
   field(THST, "23: Gain tab" )
 }
 
