Min/max waveforms

--- a/XFELIBFB/ibfbctrl_plane.template
+++ b/XFELIBFB/ibfbctrl_plane.template
@@ -1427,11 +1427,12 @@ record(ai, "$(DEV):$(PLANE)-STATS-DOWN-BPM1-MIN") {
   field(DTYP, "S7gpac")
   field(INP,  "@$(SRV)/$(READ_OFFSET)+0x09E4 T=FLOAT")
   field(PREC, "3")
+  field(FLNK, "$(DEV):$(PLANE)-STATS-DOWN-BPM1-MIN-WAV")
 }
 
 record(acalcout, "$(DEV):$(PLANE)-STATS-DOWN-BPM1-MIN-WAV") {
    field(INPA, "$(DEV):$(PLANE)-STATS-DOWN-BPM1-MIN NPP")
-   field(SCAN, "1 second")
+#   field(SCAN, "1 second")
    field(PREC, "3")
    field(NELM, "256")
    field(CALC, "ARR(A)")
@@ -1442,11 +1443,12 @@ record(ai, "$(DEV):$(PLANE)-STATS-DOWN-BPM1-MAX") {
   field(DTYP, "S7gpac")
   field(INP,  "@$(SRV)/$(READ_OFFSET)+0x09E8 T=FLOAT")
   field(PREC, "3")
+  field(FLNK, "$(DEV):$(PLANE)-STATS-DOWN-BPM1-MAX-WAV")
 }
 
 record(acalcout, "$(DEV):$(PLANE)-STATS-DOWN-BPM1-MAX-WAV") {
    field(INPA, "$(DEV):$(PLANE)-STATS-DOWN-BPM1-MAX NPP")
-   field(SCAN, "1 second")
+#   field(SCAN, "1 second")
    field(PREC, "3")
    field(NELM, "256")
    field(CALC, "ARR(A)")
@@ -1457,11 +1459,12 @@ record(ai, "$(DEV):$(PLANE)-STATS-DOWN-BPM2-MIN") {
   field(DTYP, "S7gpac")
   field(INP,  "@$(SRV)/$(READ_OFFSET)+0x09EC T=FLOAT")
   field(PREC, "3")
+  field(FLNK, "$(DEV):$(PLANE)-STATS-DOWN-BPM2-MIN-WAV")
 }
 
 record(acalcout, "$(DEV):$(PLANE)-STATS-DOWN-BPM2-MIN-WAV") {
    field(INPA, "$(DEV):$(PLANE)-STATS-DOWN-BPM2-MIN NPP")
-   field(SCAN, "1 second")
+#   field(SCAN, "1 second")
    field(PREC, "3")
    field(NELM, "256")
    field(CALC, "ARR(A)")
@@ -1472,11 +1475,12 @@ record(ai, "$(DEV):$(PLANE)-STATS-DOWN-BPM2-MAX") {
   field(DTYP, "S7gpac")
   field(INP,  "@$(SRV)/$(READ_OFFSET)+0x09F0 T=FLOAT")
   field(PREC, "3")
+  field(FLNK, "$(DEV):$(PLANE)-STATS-DOWN-BPM2-MAX-WAV")
 }
 
 record(acalcout, "$(DEV):$(PLANE)-STATS-DOWN-BPM2-MAX-WAV") {
    field(INPA, "$(DEV):$(PLANE)-STATS-DOWN-BPM2-MAX NPP")
-   field(SCAN, "1 second")
+#   field(SCAN, "1 second")
    field(PREC, "3")
    field(NELM, "256")
    field(CALC, "ARR(A)")
