--- a/XFELIBFB/ibfbctrl_plane.template
+++ b/XFELIBFB/ibfbctrl_plane.template
@@ -1508,6 +1508,7 @@ record(ai, "$(DEV):$(PLANE)-STATS-DOWN-BPM1-STD") {
   field(SCAN, "I/O Intr")
   field(DTYP, "S7gpac")
   field(INP,  "@$(SRV)/$(READ_OFFSET)+0x01F4 T=FLOAT")
+  field(ASLO, "0.001")
   field(PREC, "6")
 }
 
@@ -1515,6 +1516,7 @@ record(ai, "$(DEV):$(PLANE)-STATS-DOWN-BPM2-STD") {
   field(SCAN, "I/O Intr")
   field(DTYP, "S7gpac")
   field(INP,  "@$(SRV)/$(READ_OFFSET)+0x01F8 T=FLOAT")
+  field(ASLO, "0.001")
   field(PREC, "6")
 }
 
@@ -1522,6 +1524,7 @@ record(ai, "$(DEV):$(PLANE)-STATS-DOWN-BPM1-P-P") {
   field(SCAN, "I/O Intr")
   field(DTYP, "S7gpac")
   field(INP,  "@$(SRV)/$(READ_OFFSET)+0x01FC T=FLOAT")
+  field(ASLO, "0.001")
   field(PREC, "6")
 }
 
@@ -1529,6 +1532,7 @@ record(ai, "$(DEV):$(PLANE)-STATS-DOWN-BPM2-P-P") {
   field(SCAN, "I/O Intr")
   field(DTYP, "S7gpac")
   field(INP,  "@$(SRV)/$(READ_OFFSET)+0x0200 T=FLOAT")
+  field(ASLO, "0.001")
   field(PREC, "6")
 }
 
