--- a/XFELIBFB/ibfbcavb.template
+++ b/XFELIBFB/ibfbcavb.template
@@ -111,3 +111,13 @@ record(longout, "$(DEV):BPM2-ROUTER-ENA") {
   field(OUT,  "@$(SRV)/0x000A:0x000A T=UINT8")
   field(SCAN, "I/O Intr")
 }
+
+record(ao, "$(DEV):BPM2-Q-THRESHOLD") {
+  field(DTYP, "S7gpac")
+  field(OUT,  "@$(SRV)/0x0010:0x0010 T=FLOAT")
+  field(SCAN, "I/O Intr")
+  field(DRVH, "2000")
+  field(DRVL, "0")
+  field(HOPR, "2000")
+  field(LOPR, "0")
+}
